--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,3 @@
 <h1> Welcome to the Wine Cellar! <h1>
-<%= link_to "Sign Up", new_user_path %>
-<%= link_to "Sign In", signin_path %>
+<%= link_to "Sign Up", new_user_registration_path %>
+<%= link_to "Sign In", new_user_session_path %>
