Fixed user sign in issue, added login logic

--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -4,4 +4,4 @@
 
 
 <%= link_to "Add A Bottle", new_bottle_path %>
-<%= link_to "Log Out", signout_path %>
+<%= link_to "Log Out", destroy_user_session_path %>
