--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,7 @@
 <h1> Welcome to the Wine Cellar! <h1>
-<%= link_to "Sign Up", new_user_registration_path %>
-<%= link_to "Sign In", new_user_session_path %>
+  <% if user_signed_in? %>
+    <%= link_to "Add a bottle", new_bottle_path %>
+  <%else%>
+    <%= link_to("Sign Up", new_user_registration_path) %>
+    <%= link_to "Sign In", new_user_session_path %>
+  <%end%>
