--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,8 @@
 <h1> Welcome to the Wine Cellar! <h1>
   <% if user_signed_in? %>
     <%= link_to "Add a bottle", new_bottle_path %>
+    <%= link_to "Log Out", destroy_user_session_path, :method => "delete" %>
   <%else%>
-    <%= link_to("Sign Up", new_user_registration_path) %>
-    <%= link_to "Sign In", new_user_session_path %>
+    <%= link_to "Sign Up", new_user_registration_path %>
+    <%= link_to "Sign In", new_user_session_path  %>
   <%end%>
