--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "View Bottles", bottles_path %>
     <%= link_to "Add a bottle", new_bottle_path %>
     <br>
-    <%= link_to "Log Out", destroy_user_session_path, :method => "delete" %>
+    <%= link_to("Sign Out", destroy_user_session_path, :method => 'delete') %>
   <%else%>
     <%= link_to "Sign Up", new_user_registration_path %>
     <%= link_to "Sign In", new_user_session_path  %>
